--- a/css/main.css
+++ b/css/main.css
@@ -1,475 +1,164 @@
+
+body{
+    background: #d2d2d2;
+    font-family: 'Lato';
+    margin: 0rem;
+}
+header{
+    background: #ffe604;
+    padding: 1rem 1rem 1rem 1rem;
+}
+main{
+    margin: 2rem 2rem 2rem 2rem;
+}
+.grid-head {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-column-gap: 2rem;
+}
+@keyframes anim-hi {
+    0%   {transform: scale(1);}
+    33%  {transform: scale(1.2);}
+    100%  {transform: scale(1);}
+}
+.grid-h-item {
+    animation-name: anim-hi;
+    animation-duration: 1s;
+}
+.grid-h-item img {
+    padding: 1rem 1rem 1rem 1rem;
+    width: 85%;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    padding: 1rem;
+    grid-column-gap: 1rem;
+}
+
+.grid-item {
+    text-align: center;
+}
+footer{
+    text-align: center;
+    background: #ffe604;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+nav{
+    margin: 0rem 0rem 0rem 0rem;
+}
+i{
+    color: black;
+    font-size: 1.5rem;
+}
+a{
+    text-decoration: none;
+}
+article{
+}
+.header-link{
+    color: black;
+}
+.btn-nav{
+    color: #5f5f5f;
+    padding: 0.6rem 0.6rem 0.6rem 0.6rem;
+    margin: -0.1rem -0.1rem -0.1rem -0.1rem;
+    font-size: 1.2rem;
+}
+.btn-nav:hover{
+    color: black;
+}
+.web-title{
+    text-align: center;
+}
+.web-title i{
+    font-size: 1.8rem;
+}
+.home-desc{
+    text-align: justify;
+    animation: fadeIn ease 2s;
+    -webkit-animation: fadeIn ease 2s;
+    -moz-animation: fadeIn ease 2s;
+    -o-animation: fadeIn ease 2s;
+    -ms-animation: fadeIn ease 2s;
+}
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+.form-cont{
+    padding: 1rem 1rem 1rem 1rem;
+}
+.form-cont *{
+    padding: 1rem 1rem 1rem 1rem;
+    margin: 1rem 2rem 01rem 0.5rem;
+}
+.form-cont label{
+    padding: 0rem 0rem 0rem 0rem;
+    margin: 1rem 1rem 0rem 0rem;
+}
+
+.form-cont input{
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    margin: 1rem 0rem 0rem 0rem;
+}
+.text-center{
+    text-align: center;
+}
+
 @media (max-width: 575px) {
-    body{
-        background: #d2d2d2;
-        font-family: 'Lato';
-        margin: 0rem;
-    }
-    header{
-        background: #ffe604;
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    main{
-        margin: 2rem 2rem 2rem 2rem;
-    }
     .grid-head {
         display: grid;
         grid-template-columns: auto;
         grid-column-gap: 2rem;
     }
-    .grid-h-item {
-    }
-    .grid-h-item img {
-        padding: 1rem 1rem 1rem 1rem;
-        width: 85%;
-    }
     .grid-container {
-        display: grid;
         grid-template-columns: auto;
-        padding: 1rem;
-        grid-column-gap: 1rem;
-    }
-    .grid-item {
-        text-align: center;
-    }
-    footer{
-        text-align: center;
-        background: #ffe604;
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     }
     nav{
-        margin: 0rem 0rem 0rem 0rem;
-        text-align: center;
-    }
-    i{
-        color: black;
-        font-size: 1.5rem;
-    }
-    a{
-        text-decoration: none;
-    }
-    article{
-    }
-    .header-link{
-        color: black;
-    }
-    .btn-nav{
-        color: #5f5f5f;
-        padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-        margin: -0.1rem -0.1rem -0.1rem -0.1rem;
-        font-size: 1.2rem;
-    }
-    .btn-nav:hover{
-        color: black;
-    }
-    .web-title{
-        text-align: center;
-    }
-    .sect-title{
-
-    }
-    .sect-subtitle{
-
-    }
-    .home-desc{
-        text-align: justify;
-    }
-    .form-cont{
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    .form-cont *{
-        padding: 1rem 1rem 1rem 1rem;
-        margin: 1rem 2rem 01rem 0.5rem;
-    }
-    .form-cont label{
-        padding: 0rem 0rem 0rem 0rem;
-        margin: 1rem 1rem 0rem 0rem;
-    }
-
-    .form-cont input{
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-        margin: 1rem 0rem 0rem 0rem;
-    }
-    .text-center{
         text-align: center;
     }
 }
 @media (min-width: 576px) and (max-width: 767px) {
-    body{
-        background: #d2d2d2;
-        font-family: 'Lato';
-        margin: 0rem;
-    }
-    header{
-        background: #ffe604;
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    main{
-        margin: 2rem 2rem 2rem 2rem;
-    }
     .grid-head {
-        display: grid;
-        grid-template-columns: auto;
-        grid-column-gap: 2rem;
-    }
-    .grid-h-item {
-    }
-    .grid-h-item img {
-        padding: 1rem 1rem 1rem 1rem;
-        width: 85%;
+        grid-template-columns: 50% 50%;
     }
     .grid-container {
-        display: grid;
-        grid-template-columns: auto;
-        padding: 1rem;
-        grid-column-gap: 1rem;
-    }
-    .grid-item {
-        text-align: center;
-    }
-    footer{
-        text-align: center;
-        background: #ffe604;
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+        grid-template-columns: 50% 50%;
     }
     nav{
-        margin: 0rem 0rem 0rem 0rem;
-        text-align: center;
-    }
-    i{
-        color: black;
-        font-size: 1.5rem;
-    }
-    a{
-        text-decoration: none;
-    }
-    article{
-    }
-    .header-link{
-        color: black;
-    }
-    .btn-nav{
-        color: #5f5f5f;
-        padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-        margin: -0.1rem -0.1rem -0.1rem -0.1rem;
-        font-size: 1.2rem;
-    }
-    .btn-nav:hover{
-        color: black;
-    }
-    .web-title{
-        text-align: center;
-    }
-    .sect-title{
-
-    }
-    .sect-subtitle{
-
-    }
-    .home-desc{
-        text-align: justify;
-    }
-    .form-cont{
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    .form-cont *{
-        padding: 1rem 1rem 1rem 1rem;
-        margin: 1rem 2rem 01rem 0.5rem;
-    }
-    .form-cont label{
-        padding: 0rem 0rem 0rem 0rem;
-        margin: 1rem 1rem 0rem 0rem;
-    }
-
-    .form-cont input{
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-        margin: 1rem 0rem 0rem 0rem;
-    }
-    .text-center{
         text-align: center;
     }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-    body{
-        background: #d2d2d2;
-        font-family: 'Lato';
-        margin: 0rem;
-    }
-    header{
-        background: #ffe604;
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    main{
-        margin: 2rem 2rem 2rem 2rem;
-    }
-    .grid-head {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-column-gap: 2rem;
-    }
-    .grid-h-item {
-    }
-    .grid-h-item img {
-        padding: 1rem 1rem 1rem 1rem;
-        width: 85%;
-    }
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        padding: 1rem;
-        grid-column-gap: 1rem;
-    }
 
-    .grid-item {
-        text-align: center;
-    }
-    footer{
-        text-align: center;
-        background: #ffe604;
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-    }
-    nav{
-        margin: 0rem 0rem 0rem 0rem;
-    }
-    i{
-        color: black;
-        font-size: 1.5rem;
-    }
-    a{
-        text-decoration: none;
-    }
-    article{
-    }
-    .header-link{
-        color: black;
-    }
-    .btn-nav{
-        color: #5f5f5f;
-        padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-        margin: -0.1rem -0.1rem -0.1rem -0.1rem;
-        font-size: 1.2rem;
-    }
-    .btn-nav:hover{
-        color: black;
-    }
-    .web-title{
-        text-align: center;
-    }
-    .sect-title{
-
-    }
-    .sect-subtitle{
-
-    }
-    .home-desc{
-        text-align: justify;
-    }
-    .form-cont{
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    .form-cont *{
-        padding: 1rem 1rem 1rem 1rem;
-        margin: 1rem 2rem 01rem 0.5rem;
-    }
-    .form-cont label{
-        padding: 0rem 0rem 0rem 0rem;
-        margin: 1rem 1rem 0rem 0rem;
-    }
-
-    .form-cont input{
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-        margin: 1rem 0rem 0rem 0rem;
-    }
-    .text-center{
-        text-align: center;
-    }
 }
 @media (min-width: 992px)  and (max-width: 1199px){
-    body{
-        background: #d2d2d2;
-        font-family: 'Lato';
-        margin: 0rem;
-    }
-    header{
-        background: #ffe604;
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    main{
-        margin: 2rem 2rem 2rem 2rem;
-    }
-    .grid-head {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-column-gap: 2rem;
-    }
-    .grid-h-item {
-    }
-    .grid-h-item img {
-        padding: 1rem 1rem 1rem 1rem;
-        width: 85%;
-    }
-    .grid-container {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        padding: 1rem;
-        grid-column-gap: 1rem;
-    }
 
-    .grid-item {
-        text-align: center;
-    }
-    footer{
-        text-align: center;
-        background: #ffe604;
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-    }
-    nav{
-        margin: 0rem 0rem 0rem 0rem;
-    }
-    i{
-        color: black;
-        font-size: 1.5rem;
-    }
-    a{
-        text-decoration: none;
-    }
-    article{
-    }
-    .header-link{
-        color: black;
-    }
-    .btn-nav{
-        color: #5f5f5f;
-        padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-        margin: -0.1rem -0.1rem -0.1rem -0.1rem;
-        font-size: 1.2rem;
-    }
-    .btn-nav:hover{
-        color: black;
-    }
-    .web-title{
-        text-align: center;
-    }
-    .sect-title{
-
-    }
-    .sect-subtitle{
-
-    }
-    .home-desc{
-        text-align: justify;
-    }
-    .form-cont{
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    .form-cont *{
-        padding: 1rem 1rem 1rem 1rem;
-        margin: 1rem 2rem 01rem 0.5rem;
-    }
-    .form-cont label{
-        padding: 0rem 0rem 0rem 0rem;
-        margin: 1rem 1rem 0rem 0rem;
-    }
-
-    .form-cont input{
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-        margin: 1rem 0rem 0rem 0rem;
-    }
-    .text-center{
-        text-align: center;
-    }
 }
 @media (min-width: 1200px) {
-    body{
-        background: #d2d2d2;
-        font-family: 'Lato';
-        margin: 0rem;
-    }
-    header{
-        background: #ffe604;
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    main{
-        margin: 2rem 2rem 2rem 2rem;
-    }
-    .grid-head {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-column-gap: 2rem;
-    }
-    .grid-h-item {
-    }
-    .grid-h-item img {
-        padding: 1rem 1rem 1rem 1rem;
-        width: 85%;
-    }
     .grid-container {
-        display: grid;
-        grid-template-columns: auto auto auto;
         padding: 3rem;
         grid-column-gap: 2rem;
-    }
-
-    .grid-item {
-        text-align: center;
-    }
-    footer{
-        text-align: center;
-        background: #ffe604;
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-    }
-    nav{
-        margin: 0rem 0rem 0rem 0rem;
-    }
-    i{
-        color: black;
-        font-size: 1.5rem;
-    }
-    a{
-        text-decoration: none;
-    }
-    article{
-    }
-    .header-link{
-        color: black;
-    }
-    .btn-nav{
-        color: #5f5f5f;
-        padding: 0.6rem 0.6rem 0.6rem 0.6rem;
-        margin: -0.1rem -0.1rem -0.1rem -0.1rem;
-        font-size: 1.2rem;
-    }
-    .btn-nav:hover{
-        color: black;
-    }
-    .web-title{
-        text-align: center;
-    }
-    .sect-title{
-
-    }
-    .sect-subtitle{
-
-    }
-    .home-desc{
-        text-align: justify;
-    }
-    .form-cont{
-        padding: 1rem 1rem 1rem 1rem;
-    }
-    .form-cont *{
-        padding: 1rem 1rem 1rem 1rem;
-        margin: 1rem 2rem 01rem 0.5rem;
-    }
-    .form-cont label{
-        padding: 0rem 0rem 0rem 0rem;
-        margin: 1rem 1rem 0rem 0rem;
-    }
-
-    .form-cont input{
-        padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-        margin: 1rem 0rem 0rem 0rem;
-    }
-    .text-center{
-        text-align: center;
     }
 }
