--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,21 @@ main{
     padding: 1rem 1rem 1rem 1rem;
     width: 85%;
 }
+.grid-us {
+    display: grid;
+    padding: 1rem 1rem 1rem 1rem;
+    grid-template-columns: 40% 60%;
+    grid-column-gap: 2rem;
+}
+.grid-u-item {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    padding: 1rem;
+}
+.grid-u-item img {
+    padding: 1rem 1rem 1rem 1rem;
+    width: 100%;
+}
 .grid-container {
     display: grid;
     grid-template-columns: 33% 33% 33%;
