--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-
 body{
-    background: #d2d2d2;
     font-family: 'Lato';
     margin: 0rem;
 }
@@ -15,15 +13,6 @@ main{
     display: grid;
     grid-template-columns: 50% 50%;
     grid-column-gap: 2rem;
-}
-@keyframes anim-hi {
-    0%   {transform: scale(1);}
-    33%  {transform: scale(1.2);}
-    100%  {transform: scale(1);}
-}
-.grid-h-item {
-    animation-name: anim-hi;
-    animation-duration: 1s;
 }
 .grid-h-item img {
     padding: 1rem 1rem 1rem 1rem;
@@ -151,9 +140,30 @@ article{
 .form-cont input{
     padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     margin: 1rem 0rem 0rem 0rem;
+    border-radius: 0.3em;
+    border: solid 1px black;
+}
+.form-cont textarea{
+    width: 40%;
+    border-radius: 0.3em;
+    border: solid 1px black;
 }
 .text-center{
     text-align: center;
+}
+@keyframes scale {
+    0%   {transform: scale(1);}
+    33%  {transform: scale(1.2);}
+    100%  {transform: scale(1);}
+}
+.grid-h-item h3{
+    animation-name: scale;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+.grid-h-item img{
+    animation-name: scale;
+    animation-duration: 3s;
 }
 
 @media (max-width: 575px) {
@@ -168,6 +178,12 @@ article{
     nav{
         text-align: center;
     }
+    .form-cont textarea {
+        width: 80%;
+    }
+    .grid-us {
+        grid-template-columns: auto;
+    }
 }
 @media (min-width: 576px) and (max-width: 767px) {
     .grid-head {
@@ -179,9 +195,20 @@ article{
     nav{
         text-align: center;
     }
+    .form-cont textarea {
+        width: 80%;
+    }
+    .grid-us {
+        grid-template-columns: auto;
+    }
 }
 @media (min-width: 768px) and (max-width: 991px) {
-
+    .grid-us {
+        grid-template-columns: auto;
+    }
+    nav{
+        text-align: center;
+    }
 }
 @media (min-width: 992px)  and (max-width: 1199px){
 
